# Welding_Motoman

./: .gitignore  AAA.JBI  fronius_timing.py  home.py  js_recording.csv  move_to.py  plt_qdot_dual.py  problem_track.md  pyproject.toml  readme.md  requirements.txt  wire_cut.py
FLIR/: IRGUI.py  calibration.yml  cam_params.py  convert2max.py  flir_rr_process.py  flir_rr_process_client.py  ir_camera_capture_streaming.py  ir_edges.py  ir_lapse.py  ir_logging.py  ir_save_video.py  ir_streaming_cv.py  ir_vis.py  ir_vis_GUI.py  ir_vis_cv.py  ir_vis_raw.py  ir_vis_single.py  logging.py  manual_focus.py  manual_focus2.py  output.avi  pkl2video.py  plt_counts.py  plt_temp.py  unit_test.py  visualization_tool.py
MTI/: capture_client.py  continuous_cap.py  debug_raw.py  joint_recording.csv  robot_scan_plot.py  robot_test_scan.py
cmd_gen/: cmd_gen.py  equal_c_gen.py  equal_l_gen.py  spiral_gen.py
config/: D500B2MA1440.csv  D500B_0524_marker_config.yaml  D500B_0725_marker_config.yaml  D500B_marker_config.yaml  D500B_pose.csv  D500B_pose2.csv  D500B_pose_in_MA1440_A0.csv  D500B_pose_mocap.csv  D500B_pose_mocapcalib.csv  D500B_pose_true.csv  D500B_pulse2deg.csv  D500B_pulse2deg_real.csv  D500B_robot_default_config.yml  D500B_robot_extended_config.yml  FLIR_A320.yaml  M10ia_robot_default_config.yml  MA1440_0725_marker_config.yaml  MA1440_0801_marker_config.yaml  MA1440_0804_marker_config.yaml  MA1440_A0_pulse2deg_real.csv  MA1440_A0_robot_default_config.yml  MA1440_marker_config.yaml  MA1440_pose.csv  MA1440_pose_fake.csv  MA1440_pose_mocap.csv  MA1440_pose_mocapcalib.csv  (+51 more)
(+51461 files in other folders)
